# mpvQC

./: .env  .gitignore  .pre-commit-config.yaml  CLAUDE.md  CODE_OF_CONDUCT.md  CONTEXT.md  CONTRIBUTING.md  DEVELOPMENT.MD  Justfile  Makefile  NOTICE.txt  README.MD  README.md  REUSE.toml  crowdin.yml  dev.py  dev2.py  main.py  mpv.py  mpvQC.py  mpvQC.qrc  mpvQC_rc.py  prek.toml  pyproject.toml  pysidedeploy.spec  requirements.txt  resources.qrc  ruff.toml  setup.cfg  setup.py  start.py  start.spec  tmpv.py
.config/: biome.jsonc  prek.toml  pyrefly.toml  qmlformat.ini  ruff.toml  rumdl.toml  tombi.toml  yamlfmt.yaml
.github/: [QC]_screenshot-qc.txt  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: build.yml  python-app.yml  release.yml  test.yml
.run/: Build-Develop.run.xml  main.run.xml
LICENSES/: BSD-3-Clause.txt
build-aux/: Justfile  build.sh  color-generator.py  compile-translations.sh  generate-dependency-versions.py  generate-lupdate-project-file.py  generate-pro-file.py  generate-qrc-file.py  generate-qt-creator-project-file.py  insert-dependency-versions.py  linux-build.sh  test.sh  test_update_pyproject_file.py  update-wayland-symbols.sh  update_dependency_versions.py  update_pyproject_file.py
build-aux/linux/: AppImageBuilder.yml  Justfile  build.yml  com.github.mpvqc.mpvQC.desktop  com.github.mpvqc.mpvQC.metainfo.xml  com.github.mpvqc.mpvQC.yml  flatpak-pypi-checker.py
build-aux/themes/: Justfile  color-generator.py
config/: menubar.json
data/: build-info.conf  build-info.toml  qtquickcontrols2.conf  themes.json
data/config/: Readme.txt  backup-template.jinja  export-template.jinja  extended-export-readme.txt  input.conf  mpv-linux.conf  mpv-windows.conf  mpv.conf  mpvQC-export.template
data/html/: about.html  credits.html  license.html
data/themes/: 01-dark.toml  02-light.toml  03-nord-dark.toml  Justfile  README.MD  color-generator.py  nord-dark.toml  theme.template
data/ui/: dialog_about.ui  main_window.ui
data/xml/: dialog_about.xml  search_form.xml
de/: i18n
docs/: architecture.md  configuration.md  dev-environment-setup.md  dev-setup-linux.md  dev-setup-windows.md  development.md  internationalization.md  releasing.md
docs/developer/: README.MD  dev-adding-new-languages.md  dev-env-linux.md  dev-env-windows.md  internationalization.md
docs/document-format/: README.md  v1.json
es-ES/: i18n
gui/: about.ui  dialog_about.ui  dialog_backup.ui  dialog_edit_comment_types.ui  dialog_edit_config.ui  editCommentTypes.ui  editConf.ui  editMpvConf.ui  main.ui  main_window.ui  preferences.ui  search.ui  search_form.ui
he/: i18n
i18n/: de-DE.ts  de.qm  de.ts  de_DE.ts  en-US.ts  en.qm  en.ts  es-ES.ts  es-MX-qt-overrides.ts  es-MX.ts  es.qm  es.ts  es_ES.ts  he-IL.ts  he.qm  he.ts  he_IL.ts  it-IT.ts  it.qm  it.ts  it_IT.ts  mpvQC.pro  pt-PT.ts
it/: i18n
mpvqc/: __init__.py  _files.py  _main.py  _metadata.py  _resources.py  _resources_rc.py  _settings.py  application.py  build.py  close_event_filter.py  datamodels.py  decorators.py  enums.py  injections.py  jobs.py  logging.py  logging_utils.py  models.py  splash.py  startup.py  ui_loader.py
mpvqc/controllers/: __init__.py  _attached_dialog_dimensions.py  _attachment_dialog_size.py  about_dialog.py  backup_dialog.py  backup_timer.py  comment_types_dialog.py  drop_area.py  edit_input_dialog.py  edit_mpv_dialog.py  export_settings_dialog.py  file_dialog.py  footer.py  header.py  import_settings_dialog.py  message_box_loader.py  player.py  search_box.py  shortcut_dialog.py  theme.py  version_check_message_box.py
mpvqc/dialogs/: __init__.py  about.py  appearance.py  backup.py  comment_types.py  dialog_loader.py  edit_input.py  edit_mpv.py  export_settings.py  import_settings.py
mpvqc/enums/: __init__.py  import_found_video.py  import_wizard_session_mode.py  import_wizard_step_kind.py  time_format.py  window_title_format.py
mpvqc/framelesswindow/: __init__.py
mpvqc/helpers/: __init__.py  backend_backupper.py  backend_manager.py  close.py  label_width_calculator.py  player.py  player_properties.py  resizer.py  settings.py  utility.py  version_checker.py  window_properties.py
mpvqc/impl/: __init__.py  address_proc_getter.py  application_state.py  build_info_extractor.py  file_reader.py  file_reader_resources.py  file_service_non_portable.py  file_service_portable.py  file_writer.py  mpv.py  player_renderer.py  searcher.py  subtitle_cacher.py
mpvqc/manager/: __init__.py  _exporter.py  _handleimport.py  _handlesave.py  _importer.py  _states.py
mpvqc/models/: __init__.py  dependencies.py  export_templates.py  import_options.py  languages.py  primary_colors.py  shortcuts.py  theme_color_options.py  theme_palette.py  theme_preview.py
mpvqc/player/: __init__.py  _bindings.py  _player.py
mpvqc/pyobjects/: __init__.py  application_paths.py  backend_backupper.py  backend_manager.py  backup.py  clipboard.py  comment_model.py  comment_type_validator.py  comments_model.py  comments_validator.py  dialog_about.py  document_exporter.py  environment.py  export_template_model.py  extended_document_exporter.py  file_interface.py  file_io.py  file_paths.py  file_system_helper.py  manager.py  mouse.py  player.py  player_files.py  player_framebuffer_object.py  player_properties.py  player_win_id.py  qc_manager.py  resource.py  reverse_translator.py  settings.py  text_validator.py  themes.py  translation.py  utility.py  version_checker.py
mpvqc/services/: __init__.py  _internal.py  backup.py  (+46 more)
pt-PT/: i18n
qml/: Main.qml  MainWindows.qml  event-registry.js  main.qml  utils.js  window-operations.js
qml-legacy/: main.qml
src/: __init__.py  _files.py  _logging.py  _main.py  _settings.py  configuration.py  constants.py  events.py  files.py  logging.py  main.py  messageboxes.py  mpvqc.py  qcutils.py  settings.py
test/: __init__.py  conftest.py  generated_resources.py  mocks.py  prepare_qml.py  test_application.py  test_jobs.py  test_logging_utils.py  test_qml.py  test_set_metadata.py
testqml/: bridge.py  import_wizard_fixtures.py  injections.py  main.py
(+1621 files in other folders)
