# SPDX-FileCopyrightText: mpvQC developers
#
# SPDX-License-Identifier: MIT

[project]
name = "mpvQC"
version = "0.9.0-beta3"
description = "libmpv based application for quality control of videos"
readme = "README.md"
requires-python = "~=3.13.0"
classifiers = [
    "Development Status :: 4 - Beta",                                              # 4 - Beta, 5 - Production/Stable
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Private :: Do Not Upload",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "Jinja2>=3.1.6",
    "PySide6-Essentials==6.11.0",
    "inject>=5.3.0",
    "mpv>=1.0.8",
    "pywin32>=311; sys_platform == 'win32'",
]

[project.urls]
Homepage = "https://mpvqc.github.io"
Issues = "https://github.com/mpvqc/mpvQC/issues"
Repository = "https://github.com/mpvqc/mpvQC"

[dependency-groups]
dev = [
    "materialyoucolor>=3.0.2",
    "prek>=0.3.8",
    "pyrefly>=0.59.1",
    "pytest>=9.0.3",
]

[tool.pyside6-project]
files = [
    # WARNING! This list is auto updated by the just build helper
    "data/build-info.toml",
    "data/config/backup-template.jinja",
    "data/config/export-template.jinja",
    "data/config/input.conf",
    "data/config/mpv-linux.conf",
    "data/config/mpv-windows.conf",
    "data/fonts/NotoSans-Bold.ttf",
    "data/fonts/NotoSans-Italic.ttf",
    "data/fonts/NotoSans-Regular.ttf",
    "data/fonts/NotoSans-SemiBold.ttf",
    "data/fonts/NotoSansHebrew-Bold.ttf",
    "data/fonts/NotoSansHebrew-Regular.ttf",
    "data/fonts/NotoSansHebrew-SemiBold.ttf",
    "data/fonts/NotoSansMono-Regular.ttf",
    "data/icon.svg",
    "data/icons/arrow_drop_down_24dp_1F1F1F_FILL0_wght400_GRAD0_opsz24.svg",
    "data/icons/aspect_ratio_24dp_1F1F1F_FILL0_wght400_GRAD0_opsz24.svg",
    "data/icons/check_24dp_1F1F1F_FILL0_wght400_GRAD0_opsz24.svg",
    "data/icons/close_24dp_1F1F1F_FILL0_wght400_GRAD0_opsz24.svg",
    "data/icons/close_fullscreen_24dp_1F1F1F_FILL0_wght400_GRAD0_opsz24.svg",
    "data/icons/comment_24dp_1F1F1F_FILL0_wght400_GRAD0_opsz24.svg",
    "data/icons/content_copy_24dp_1F1F1F_FILL0_wght400_GRAD0_opsz24.svg",
    "data/icons/delete_24dp_1F1F1F_FILL0_wght400_GRAD0_opsz24.svg",
    "data/icons/description_24dp_1F1F1F_FILL0_wght400_GRAD0_opsz24.svg",
    "data/icons/download_24dp_1F1F1F_FILL0_wght400_GRAD0_opsz24.svg",
    "data/icons/draft_24dp_1F1F1F_FILL0_wght400_GRAD0_opsz24.svg",
    "data/icons/edit_24dp_1F1F1F_FILL0_wght400_GRAD0_opsz24.svg",
    "data/icons/exit_to_app_24dp_1F1F1F_FILL0_wght400_GRAD0_opsz24.svg",
    "data/icons/file_export_24dp_1F1F1F_FILL0_wght400_GRAD0_opsz24.svg",
    "data/icons/file_open_24dp_1F1F1F_FILL0_wght400_GRAD0_opsz24.svg",
    "data/icons/first_page_24dp_1F1F1F_FILL0_wght400_GRAD0_opsz24.svg",
    "data/icons/folder_open_24dp_1F1F1F_FILL0_wght400_GRAD0_opsz24.svg",
    "data/icons/info_24dp_1F1F1F_FILL0_wght400_GRAD0_opsz24.svg",
    "data/icons/keyboard_24dp_1F1F1F_FILL0_wght400_GRAD0_opsz24.svg",
    "data/icons/keyboard_arrow_down_24dp_1F1F1F_FILL0_wght400_GRAD0_opsz24.svg",
    "data/icons/keyboard_arrow_left_24dp_1F1F1F_FILL0_wght400_GRAD0_opsz24.svg",
    "data/icons/keyboard_arrow_right_24dp_1F1F1F_FILL0_wght400_GRAD0_opsz24.svg",
    "data/icons/keyboard_arrow_up_24dp_1F1F1F_FILL0_wght400_GRAD0_opsz24.svg",
    "data/icons/keyboard_backspace_24dp_1F1F1F_FILL0_wght400_GRAD0_opsz24.svg",
    "data/icons/keyboard_double_arrow_right_24dp_1F1F1F_FILL0_wght400_GRAD0_opsz24.svg",
    "data/icons/keyboard_return_24dp_1F1F1F_FILL0_wght400_GRAD0_opsz24.svg",
    "data/icons/language_24dp_1F1F1F_FILL0_wght400_GRAD0_opsz24.svg",
    "data/icons/last_page_24dp_1F1F1F_FILL0_wght400_GRAD0_opsz24.svg",
    "data/icons/minimize_24dp_1F1F1F_FILL0_wght400_GRAD0_opsz24.svg",
    "data/icons/movie_24dp_1F1F1F_FILL0_wght400_GRAD0_opsz24.svg",
    "data/icons/movie_edit_24dp_1F1F1F_FILL0_wght400_GRAD0_opsz24.svg",
    "data/icons/music_note_24dp_1F1F1F_FILL0_wght400_GRAD0_opsz24.svg",
    "data/icons/notes_24dp_1F1F1F_FILL0_wght400_GRAD0_opsz24.svg",
    "data/icons/open_in_full_24dp_1F1F1F_FILL0_wght400_GRAD0_opsz24.svg",
    "data/icons/palette_24dp_1F1F1F_FILL0_wght400_GRAD0_opsz24.svg",
    "data/icons/play_arrow_24dp_1F1F1F_FILL0_wght400_GRAD0_opsz24.svg",
    "data/icons/save_24dp_1F1F1F_FILL0_wght400_GRAD0_opsz24.svg",
    "data/icons/save_as_24dp_1F1F1F_FILL0_wght400_GRAD0_opsz24.svg",
    "data/icons/search_24dp_1F1F1F_FILL0_wght400_GRAD0_opsz24.svg",
    "data/icons/select_24dp_1F1F1F_FILL0_wght400_GRAD0_opsz24.svg",
    "data/icons/select_check_box_24dp_1F1F1F_FILL0_wght400_GRAD0_opsz24.svg",
    "data/icons/settings_backup_restore_24dp_1F1F1F_FILL0_wght400_GRAD0_opsz24.svg",
    "data/icons/space_bar_24dp_1F1F1F_FILL0_wght400_GRAD0_opsz24.svg",
    "data/icons/subtitles_24dp_1F1F1F_FILL0_wght400_GRAD0_opsz24.svg",
    "data/icons/title_24dp_1F1F1F_FILL0_wght400_GRAD0_opsz24.svg",
    "data/icons/tooltip_2_24dp_1F1F1F_FILL0_wght400_GRAD0_opsz24.svg",
    "data/icons/update_24dp_1F1F1F_FILL0_wght400_GRAD0_opsz24.svg",
    "data/icons/upload_24dp_1F1F1F_FILL0_wght400_GRAD0_opsz24.svg",
    "data/icons/vertical_split_24dp_1F1F1F_FILL0_wght400_GRAD0_opsz24.svg",
    "data/themes.json",
    "i18n/de-DE.ts",
    "i18n/en-US.ts",
    "i18n/es-MX-qt-overrides.ts",
    "i18n/es-MX.ts",
    "i18n/he-IL.ts",
    "i18n/it-IT.ts",
    "i18n/pt-PT.ts",
    "main.py",
    "mpvqc/__init__.py",
    "mpvqc/application.py",
    "mpvqc/build.py",
    "mpvqc/close_event_filter.py",
    "mpvqc/datamodels.py",
    "mpvqc/enums/__init__.py",
    "mpvqc/enums/time_format.py",
    "mpvqc/enums/window_title_format.py",
    "mpvqc/injections.py",
    "mpvqc/logging_utils.py",
    "mpvqc/models/__init__.py",
    "mpvqc/models/comments/__init__.py",
    "mpvqc/models/comments/item.py",
    "mpvqc/models/comments/model.py",
    "mpvqc/models/comments/mutation.py",
    "mpvqc/models/comments/roles.py",
    "mpvqc/models/comments/undo.py",
    "mpvqc/models/comments/utils.py",
    "mpvqc/models/dependencies.py",
    "mpvqc/models/export_templates.py",
    "mpvqc/models/import_options.py",
    "mpvqc/models/languages.py",
    "mpvqc/models/theme_palette.py",
    "mpvqc/models/theme_preview.py",
    "mpvqc/services/__init__.py",
    "mpvqc/services/application_paths.py",
    "mpvqc/services/build_info.py",
    "mpvqc/services/comment_type_validator.py",
    "mpvqc/services/comments.py",
    "mpvqc/services/desktop.py",
    "mpvqc/services/document_exporter.py",
    "mpvqc/services/document_importer.py",
    "mpvqc/services/exporter.py",
    "mpvqc/services/file_startup.py",
    "mpvqc/services/font_loader.py",
    "mpvqc/services/formatter_time.py",
    "mpvqc/services/frameless/__init__.py",
    "mpvqc/services/frameless/linux/__init__.py",
    "mpvqc/services/frameless/linux/event.py",
    "mpvqc/services/frameless/service.py",
    "mpvqc/services/frameless/win/__init__.py",
    "mpvqc/services/frameless/win/c_structures.py",
    "mpvqc/services/frameless/win/event.py",
    "mpvqc/services/frameless/win/utils.py",
    "mpvqc/services/host_integration/__init__.py",
    "mpvqc/services/host_integration/portals.py",
    "mpvqc/services/host_integration/service.py",
    "mpvqc/services/host_integration/window_buttons.py",
    "mpvqc/services/i18n.py",
    "mpvqc/services/importer.py",
    "mpvqc/services/key_command.py",
    "mpvqc/services/label_width_calculator.py",
    "mpvqc/services/main_window.py",
    "mpvqc/services/mimetype_provider.py",
    "mpvqc/services/player.py",
    "mpvqc/services/quit.py",
    "mpvqc/services/resetter.py",
    "mpvqc/services/resource.py",
    "mpvqc/services/reverse_translator.py",
    "mpvqc/services/settings.py",
    "mpvqc/services/state.py",
    "mpvqc/services/subtitle_importer.py",
    "mpvqc/services/theme.py",
    "mpvqc/services/type_mapper.py",
    "mpvqc/services/version_checker.py",
    "mpvqc/services/video_resize.py",
    "mpvqc/services/window_properties.py",
    "mpvqc/startup.py",
    "mpvqc/viewmodels/__init__.py",
    "mpvqc/viewmodels/app/__init__.py",
    "mpvqc/viewmodels/app/app.py",
    "mpvqc/viewmodels/app/drop_area.py",
    "mpvqc/viewmodels/app/resize.py",
    "mpvqc/viewmodels/dialogs/__init__.py",
    "mpvqc/viewmodels/dialogs/about.py",
    "mpvqc/viewmodels/dialogs/appearance.py",
    "mpvqc/viewmodels/dialogs/backup.py",
    "mpvqc/viewmodels/dialogs/comment_types.py",
    "mpvqc/viewmodels/dialogs/dialog_loader.py",
    "mpvqc/viewmodels/dialogs/edit_input.py",
    "mpvqc/viewmodels/dialogs/edit_mpv.py",
    "mpvqc/viewmodels/dialogs/export_settings.py",
    "mpvqc/viewmodels/dialogs/import_settings.py",
    "mpvqc/viewmodels/file_dialogs/__init__.py",
    "mpvqc/viewmodels/file_dialogs/export_file_dialog.py",
    "mpvqc/viewmodels/file_dialogs/import_file_dialogs.py",
    "mpvqc/viewmodels/message_boxes/__init__.py",
    "mpvqc/viewmodels/message_boxes/message_box_loader.py",
    "mpvqc/viewmodels/message_boxes/quit.py",
    "mpvqc/viewmodels/message_boxes/reset.py",
    "mpvqc/viewmodels/message_boxes/version_check.py",
    "mpvqc/viewmodels/utility/__init__.py",
    "mpvqc/viewmodels/utility/label_width_calculator.py",
    "mpvqc/viewmodels/utility/theme.py",
    "mpvqc/viewmodels/utility/window_properties.py",
    "mpvqc/viewmodels/views/__init__.py",
    "mpvqc/viewmodels/views/footer.py",
    "mpvqc/viewmodels/views/header/__init__.py",
    "mpvqc/viewmodels/views/header/header.py",
    "mpvqc/viewmodels/views/header/menu_bar.py",
    "mpvqc/viewmodels/views/header/toolbar.py",
    "mpvqc/viewmodels/views/header/window_buttons.py",
    "mpvqc/viewmodels/views/player/__init__.py",
    "mpvqc/viewmodels/views/player/new_comment_menu.py",
    "mpvqc/viewmodels/views/player/player.py",
    "mpvqc/viewmodels/views/table/__init__.py",
    "mpvqc/viewmodels/views/table/backup_timer.py",
    "mpvqc/viewmodels/views/table/comment_table.py",
    "mpvqc/viewmodels/views/table/placeholder.py",
    "mpvqc/viewmodels/views/table/search_box.py",
    "mpvqc/viewmodels/views/table/table_utility.py",
    "mpvqc/viewmodels/window_visibility.py",
    "mpvqc/views/__init__.py",
    "mpvqc/views/player_framebuffer_object.py",
    "mpvqc/views/player_win_id.py",
    "project.qrc",
    "qt/qml/io/github/mpvqc/mpvQC/App/MpvqcApplicationContent.qml",
    "qt/qml/io/github/mpvqc/mpvQC/App/MpvqcContentKeyHandler.qml",
    "qt/qml/io/github/mpvqc/mpvQC/App/MpvqcFileDropArea.qml",
    "qt/qml/io/github/mpvqc/mpvQC/App/MpvqcLayout.qml",
    "qt/qml/io/github/mpvqc/mpvQC/App/MpvqcOverlayController.qml",
    "qt/qml/io/github/mpvqc/mpvQC/App/qmldir",
    "qt/qml/io/github/mpvqc/mpvQC/App/TestHelpers.qml",
    "qt/qml/io/github/mpvqc/mpvQC/App/tst_MpvqcApplicationContent_FileMenu.qml",
    "qt/qml/io/github/mpvqc/mpvQC/App/tst_MpvqcApplicationContent_HelpMenu.qml",
    "qt/qml/io/github/mpvqc/mpvQC/App/tst_MpvqcApplicationContent_NewCommentMenu.qml",
    "qt/qml/io/github/mpvqc/mpvQC/App/tst_MpvqcApplicationContent_OptionsMenu.qml",
    "qt/qml/io/github/mpvqc/mpvQC/App/tst_MpvqcApplicationContent_Shortcuts.qml",
    "qt/qml/io/github/mpvqc/mpvQC/App/tst_MpvqcApplicationContent_VideoMenu.qml",
    "qt/qml/io/github/mpvqc/mpvQC/App/tst_MpvqcApplicationContent_WindowChrome.qml",
    "qt/qml/io/github/mpvqc/mpvQC/App/tst_MpvqcContentKeyHandler.qml",
    "qt/qml/io/github/mpvqc/mpvQC/Components/MpvqcDebugRectangle.qml",
    "qt/qml/io/github/mpvqc/mpvQC/Components/MpvqcDialog.qml",
    "qt/qml/io/github/mpvqc/mpvQC/Components/MpvqcHeader.qml",
    "qt/qml/io/github/mpvqc/mpvQC/Components/MpvqcIconLabel.qml",
    "qt/qml/io/github/mpvqc/mpvQC/Components/MpvqcKeyboardFocusableButtonBox.qml",
    "qt/qml/io/github/mpvqc/mpvQC/Components/MpvqcLabelWithToolTip.qml",
    "qt/qml/io/github/mpvqc/mpvQC/Components/MpvqcMenu.qml",
    "qt/qml/io/github/mpvqc/mpvQC/Components/MpvqcMessageBox.qml",
    "qt/qml/io/github/mpvqc/mpvQC/Components/MpvqcPositionedMenu.qml",
    "qt/qml/io/github/mpvqc/mpvQC/Components/MpvqcSpinBoxRow.qml",
    "qt/qml/io/github/mpvqc/mpvQC/Components/MpvqcSwitchRow.qml",
    "qt/qml/io/github/mpvqc/mpvQC/Components/MpvqcTextFieldRow.qml",
    "qt/qml/io/github/mpvqc/mpvQC/Components/qmldir",
    "qt/qml/io/github/mpvqc/mpvQC/Components/tst_MpvqcMenu.qml",
    "qt/qml/io/github/mpvqc/mpvQC/Components/tst_MpvqcPositionedMenu.qml",
    "qt/qml/io/github/mpvqc/mpvQC/Components/tst_MpvqcSpinBoxRow.qml",
    "qt/qml/io/github/mpvqc/mpvQC/Components/tst_MpvqcSwitchRow.qml",
    "qt/qml/io/github/mpvqc/mpvQC/Components/tst_MpvqcTextFieldRow.qml",
    "qt/qml/io/github/mpvqc/mpvQC/Dialogs/MpvqcAboutDialog.qml",
    "qt/qml/io/github/mpvqc/mpvQC/Dialogs/MpvqcAppearanceDialog.qml",
    "qt/qml/io/github/mpvqc/mpvQC/Dialogs/MpvqcBackupDialog.qml",
    "qt/qml/io/github/mpvqc/mpvQC/Dialogs/MpvqcCommentTypesDialog.qml",
    "qt/qml/io/github/mpvqc/mpvQC/Dialogs/MpvqcDialogLoader.qml",
    "qt/qml/io/github/mpvqc/mpvQC/Dialogs/MpvqcEditInputDialog.qml",
    "qt/qml/io/github/mpvqc/mpvQC/Dialogs/MpvqcEditMpvDialog.qml",
    "qt/qml/io/github/mpvqc/mpvQC/Dialogs/MpvqcExportSettingsDialog.qml",
    "qt/qml/io/github/mpvqc/mpvQC/Dialogs/MpvqcImportConfirmationDialog.qml",
    "qt/qml/io/github/mpvqc/mpvQC/Dialogs/MpvqcImportConfirmationDialogViewModel.qml",
    "qt/qml/io/github/mpvqc/mpvQC/Dialogs/MpvqcImportSettingsDialog.qml",
    "qt/qml/io/github/mpvqc/mpvQC/Dialogs/MpvqcShortcutDialog.qml",
    "qt/qml/io/github/mpvqc/mpvQC/Dialogs/qmldir",
    "qt/qml/io/github/mpvqc/mpvQC/Dialogs/tst_MpvqcImportConfirmationDialogViewModel.qml",
    "qt/qml/io/github/mpvqc/mpvQC/FileDialogs/MpvqcExportDocumentFileDialog.qml",
    "qt/qml/io/github/mpvqc/mpvQC/FileDialogs/MpvqcFileDialogLoader.qml",
    "qt/qml/io/github/mpvqc/mpvQC/FileDialogs/MpvqcImportDocumentsFileDialog.qml",
    "qt/qml/io/github/mpvqc/mpvQC/FileDialogs/MpvqcImportSubtitlesFileDialog.qml",
    "qt/qml/io/github/mpvqc/mpvQC/FileDialogs/MpvqcImportVideoFileDialog.qml",
    "qt/qml/io/github/mpvqc/mpvQC/FileDialogs/MpvqcSaveDocumentFileDialog.qml",
    "qt/qml/io/github/mpvqc/mpvQC/FileDialogs/qmldir",
    "qt/qml/io/github/mpvqc/mpvQC/MessageBoxes/MpvqcDocumentNotCompatibleMessageBox.qml",
    "qt/qml/io/github/mpvqc/mpvQC/MessageBoxes/MpvqcExtendedExportErrorMessageBox.qml",
    "qt/qml/io/github/mpvqc/mpvQC/MessageBoxes/MpvqcExtendedExportMessageBox.qml",
    "qt/qml/io/github/mpvqc/mpvQC/MessageBoxes/MpvqcMessageBoxLoader.qml",
    "qt/qml/io/github/mpvqc/mpvQC/MessageBoxes/MpvqcQuitMessageBox.qml",
    "qt/qml/io/github/mpvqc/mpvQC/MessageBoxes/MpvqcResetMessageBox.qml",
    "qt/qml/io/github/mpvqc/mpvQC/MessageBoxes/MpvqcVersionCheckMessageBox.qml",
    "qt/qml/io/github/mpvqc/mpvQC/MessageBoxes/qmldir",
    "qt/qml/io/github/mpvqc/mpvQC/MessageBoxes/tst_MpvqcMessageBoxLoader.qml",
    "qt/qml/io/github/mpvqc/mpvQC/Models/MpvqcCreditsModel.qml",
    "qt/qml/io/github/mpvqc/mpvQC/Models/MpvqcShortcutsModel.qml",
    "qt/qml/io/github/mpvqc/mpvQC/Models/qmldir",
    "qt/qml/io/github/mpvqc/mpvQC/Utility/MpvqcConstants.qml",
    "qt/qml/io/github/mpvqc/mpvQC/Utility/MpvqcIcons.qml",
    "qt/qml/io/github/mpvqc/mpvQC/Utility/MpvqcLabelWidthCalculator.qml",
    "qt/qml/io/github/mpvqc/mpvQC/Utility/MpvqcTheme.qml",
    "qt/qml/io/github/mpvqc/mpvQC/Utility/MpvqcWindowUtility.qml",
    "qt/qml/io/github/mpvqc/mpvQC/Utility/qmldir",
    "qt/qml/io/github/mpvqc/mpvQC/Views/Footer/MpvqcFooterContextMenu.qml",
    "qt/qml/io/github/mpvqc/mpvQC/Views/Footer/MpvqcFooterContextMenuClickGuard.qml",
    "qt/qml/io/github/mpvqc/mpvQC/Views/Footer/MpvqcFooterView.qml",
    "qt/qml/io/github/mpvqc/mpvQC/Views/Footer/qmldir",
    "qt/qml/io/github/mpvqc/mpvQC/Views/Footer/tst_MpvqcFooterView.qml",
    "qt/qml/io/github/mpvqc/mpvQC/Views/Header/MpvqcHeaderView.qml",
    "qt/qml/io/github/mpvqc/mpvQC/Views/Header/MpvqcHeaderWindowButtons.qml",
    "qt/qml/io/github/mpvqc/mpvQC/Views/Header/MpvqcLanguageSubMenu.qml",
    "qt/qml/io/github/mpvqc/mpvQC/Views/Header/MpvqcMenuBar.qml",
    "qt/qml/io/github/mpvqc/mpvQC/Views/Header/MpvqcMenuBarItem.qml",
    "qt/qml/io/github/mpvqc/mpvQC/Views/Header/MpvqcMenuBarMenu.qml",
    "qt/qml/io/github/mpvqc/mpvQC/Views/Header/MpvqcRadioMenu.qml",
    "qt/qml/io/github/mpvqc/mpvQC/Views/Header/MpvqcToolBarButton.qml",
    "qt/qml/io/github/mpvqc/mpvQC/Views/Header/MpvqcToolBarView.qml",
    "qt/qml/io/github/mpvqc/mpvQC/Views/Header/qmldir",
    "qt/qml/io/github/mpvqc/mpvQC/Views/Header/tst_MpvqcHeaderWindowButtons.qml",
    "qt/qml/io/github/mpvqc/mpvQC/Views/Player/MpvqcNewCommentMenu.qml",
    "qt/qml/io/github/mpvqc/mpvQC/Views/Player/MpvqcNewCommentMenuClickGuard.qml",
    "qt/qml/io/github/mpvqc/mpvQC/Views/Player/MpvqcPlayerInputArea.qml",
    "qt/qml/io/github/mpvqc/mpvQC/Views/Player/MpvqcPlayerLinux.qml",
    "qt/qml/io/github/mpvqc/mpvQC/Views/Player/MpvqcPlayerStub.qml",
    "qt/qml/io/github/mpvqc/mpvQC/Views/Player/MpvqcPlayerView.qml",
    "qt/qml/io/github/mpvqc/mpvQC/Views/Player/MpvqcPlayerWindows.qml",
    "qt/qml/io/github/mpvqc/mpvQC/Views/Player/qmldir",
    "qt/qml/io/github/mpvqc/mpvQC/Views/Player/tst_MpvqcNewCommentMenu.qml",
    "qt/qml/io/github/mpvqc/mpvQC/Views/Player/tst_MpvqcPlayerInputArea.qml",
    "qt/qml/io/github/mpvqc/mpvQC/Views/Table/MpvqcCommentList.qml",
    "qt/qml/io/github/mpvqc/mpvQC/Views/Table/MpvqcCommentListDelegate.qml",
    "qt/qml/io/github/mpvqc/mpvQC/Views/Table/MpvqcCommentListKeyHandler.qml",
    "qt/qml/io/github/mpvqc/mpvQC/Views/Table/MpvqcCommentListOverlays.qml",
    "qt/qml/io/github/mpvqc/mpvQC/Views/Table/MpvqcContextMenuLoader.qml",
    "qt/qml/io/github/mpvqc/mpvQC/Views/Table/MpvqcEditCommentPopup.qml",
    "qt/qml/io/github/mpvqc/mpvQC/Views/Table/MpvqcEditCommentTypeMenu.qml",
    "qt/qml/io/github/mpvqc/mpvQC/Views/Table/MpvqcEditLoader.qml",
    "qt/qml/io/github/mpvqc/mpvQC/Views/Table/MpvqcEditTimePopup.qml",
    "qt/qml/io/github/mpvqc/mpvQC/Views/Table/MpvqcMessageBoxLoader.qml",
    "qt/qml/io/github/mpvqc/mpvQC/Views/Table/MpvqcPlaceholderView.qml",
    "qt/qml/io/github/mpvqc/mpvQC/Views/Table/MpvqcSearchBoxDragHandler.qml",
    "qt/qml/io/github/mpvqc/mpvQC/Views/Table/MpvqcSearchBoxLoader.qml",
    "qt/qml/io/github/mpvqc/mpvQC/Views/Table/MpvqcSearchBoxPopup.qml",
    "qt/qml/io/github/mpvqc/mpvQC/Views/Table/MpvqcTableUtility.qml",
    "qt/qml/io/github/mpvqc/mpvQC/Views/Table/MpvqcTableView.qml",
    "qt/qml/io/github/mpvqc/mpvQC/Views/Table/MpvqcWindowsMenuClickGuard.qml",
    "qt/qml/io/github/mpvqc/mpvQC/Views/Table/qmldir",
    "qt/qml/io/github/mpvqc/mpvQC/Views/Table/TestHelpers.qml",
    "qt/qml/io/github/mpvqc/mpvQC/Views/Table/tst_MpvqcCommentListKeyHandler.qml",
    "qt/qml/io/github/mpvqc/mpvQC/Views/Table/tst_MpvqcTableUtility.qml",
    "qt/qml/io/github/mpvqc/mpvQC/Views/Table/tst_MpvqcTableView.qml",
    "qt/qml/io/github/mpvqc/mpvQC/Views/Table/tst_MpvqcTableView_ContextMenu.qml",
    "qt/qml/io/github/mpvqc/mpvQC/Views/Table/tst_MpvqcTableView_EditingComment.qml",
    "qt/qml/io/github/mpvqc/mpvQC/Views/Table/tst_MpvqcTableView_EditingCommentType.qml",
    "qt/qml/io/github/mpvqc/mpvQC/Views/Table/tst_MpvqcTableView_EditingTime.qml",
    "qt/qml/io/github/mpvqc/mpvQC/Views/Table/tst_MpvqcTableView_RealViewModel.qml",
    "qt/qml/io/github/mpvqc/mpvQC/Views/Table/tst_MpvqcTableView_SearchBox.qml",
    "qt/qml/io/github/mpvqc/mpvQC/Views/Table/tst_MpvqcTableView_SearchBoxPosition.qml",
    "qt/qml/io/github/mpvqc/mpvQC/Views/Table/tst_MpvqcTableView_Selection.qml",
    "qt/qml/MpvqcApplication.qml",
    "qt/qml/MpvqcStyle/qmldir",
    "qt/qml/MpvqcStyle/ToolTip.qml",
    "testqml/__init__.py",
    "testqml/bridge.py",
    "testqml/fixtures/portable-root/appdata/export-templates/error.jinja",
    "testqml/fixtures/portable-root/appdata/export-templates/working.jinja",
    "testqml/fixtures/portable-root/appdata/input.conf",
    "testqml/fixtures/portable-root/appdata/mpv.conf",
    "testqml/fixtures/portable-root/portable",
    "testqml/fixtures/qc_document_basic.txt",
    "testqml/fixtures/qc_document_invalid.txt",
    "testqml/fixtures/subtitle_basic.ass",
    "testqml/fixtures/subtitle_complex.ass",
    "testqml/fixtures/video_basic.mp4",
    "testqml/injections.py",
    "testqml/main.py",
]
